# AppAPI_CPP

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conan_install_linux_all.sh  conan_install_linux_native.sh  conan_install_linux_rpi.sh  conan_install_windows.ps1  conanfile.py  sbomify.json.in
.github/workflows/: build_linux.yml  build_windows.yml
cmake/: gRPC.cmake
src/: AppClient.cpp  AppClient.h  Version.h.in
src/DataTypes/: LicenseDetails.cpp  LicenseDetails.h  Matrix44.cpp  Matrix44.h  MotionState.cpp  MotionState.h  ProgramVariable.h  RobotState.cpp  RobotState.h  Statistics.cpp  Statistics.h  SystemInfo.cpp  SystemInfo.h
tests/: README.md
tests/DataTypes/: LicenseInfoTest.cpp  Matrix44Test.cpp  MotionStateTest.cpp  NumberVariableTest.cpp  PositionVariableTest.cpp  RobotStateTest.cpp  StatisticsTest.cpp  SystemInfoTest.cpp
tools/conan/profiles/Linux/: cpr_linux_rpi4_gcc10  cpr_linux_rpi4_gcc10_debug  cpr_linux_rpi4_gcc10_release  cpr_linux_x86_64  cpr_linux_x86_64_debug  cpr_linux_x86_64_release
tools/conan/profiles/Windows/: cpr_windows_x86_64_debug  cpr_windows_x86_64_release
